# veracity

./: .sgignores  CMakeLists.txt  NOTICE.txt  TRADEMARKS.txt  common-CMakeLists.txt
src/: CMakeLists.txt
src/cmd/: CMakeLists.txt  renderscripts.js  sg.c  sg__do_cmd_dump_lca.c  sg__do_cmd_merge_preview.c  sg__do_cmd_resolve2.c  sg__do_cmd_serve.c  sg__vv2__do_cmd_cat.c  sg__vv2__do_cmd_comment.c  sg__vv2__do_cmd_export.c  sg__vv2__do_cmd_history.c  sg__vv2__do_cmd_init_new_repo.c  sg__vv2__do_cmd_leaves.c  sg__vv2__do_cmd_locks.c  sg__vv2__do_cmd_stamp.c  sg__vv2__do_cmd_tag.c  sg__vvwc__do_cmd_diff.c  sg__vvwc__do_cmd_mstatus.c  sg__vvwc__do_cmd_status.c  sg__wc__do_cmd_add.c  sg__wc__do_cmd_addremove.c  sg__wc__do_cmd_checkout.c  sg__wc__do_cmd_commit.c  sg__wc__do_cmd_diffmerge.c  sg__wc__do_cmd_lock.c  sg__wc__do_cmd_merge.c  sg__wc__do_cmd_move.c  sg__wc__do_cmd_parents.c  sg__wc__do_cmd_remove.c  sg__wc__do_cmd_rename.c  sg__wc__do_cmd_revert_all.c  sg__wc__do_cmd_revert_items.c  sg__wc__do_cmd_scan.c  sg__wc__do_cmd_unlock.c  sg__wc__do_cmd_update.c  sg_cmd_util.c  sg_cmd_util__comment.c  sg_cmd_util__report_addremove_journal.c  sg_cmd_util_prototypes.h  sg_help_source.h  (+6 more)
src/docs/: CMakeLists.txt  md2c.js  md2html.js  mdparser.js  readme.txt  vscript-usage.md  vv-help-branch.md  vv-help-cat.md  vv-help-commit.md  vv-help-config.md  vv-help-filetool.md  vv-help-mergepreview.md  vv-help-mstatus.md  vv-help-remove.md  vv-help-repo.md  vv-help-repopaths.md  vv-help-resolve2.md  vv-help-stamp.md  vv-help-status.md  vv-help-svnload.md  vv-help-tag.md  vv-help-user.md  vv-help-verify.md
src/hexdump/: CMakeLists.txt  sg_hexdump.c
src/js_test_lib/: setServerFiles.js  vscript_test_lib.js  vscript_test_wc_lib.js  vscript_tests.js  vv_serve_process.js  vv_serve_process_noop.js
src/js_tests/: CMakeLists.txt  Ctest_starting.cmake.in  daglca_helpers.js  data__st_attrbits_W3801.fi  data__st_attrbits_W3801_01.fi  data__st_attrbits_W3801_02.fi  data__st_sparse_10c.fi  data__st_sparse_10c1.fi  data__st_sparse_10d.fi  data__st_sparse_11a.fi  data__st_sparse_11b.fi  data__st_sparse_11c.fi  data__st_sparse_11d.fi  failing_st_CLC_zing.js  failing_st_merge_unresolved_3.js  failing_st_save_filter.js  iis_st_web_main.js  iis_st_web_repozip.js  iis_st_web_sync.js  js_devenv.bat.in  js_gdb.sh.in  js_test.bat.in  js_test.sh.in  longtests__st_addremove_deleted__SPRAWL_864.js  longtests__st_addremove_deleted__SPRAWL_864_01.js  longtests__st_branch_name_validity.js  longtests__st_commit__long_comment.js  longtests__st_daglca_bitvector_1.js  longtests__st_daglca_tests_002.js  longtests__st_daglca_tests_003.js  longtests__st_daglca_tests_004.js  longtests__st_daglca_tests_005.js  longtests__st_daglca_tests_006.js  longtests__st_daglca_tests_007.js  longtests__st_daglca_tests_008.js  longtests__st_daglca_tests_009.js  longtests__st_daglca_tests_010.js  longtests__st_daglca_tests_011.js  longtests__st_daglca_tests_012.js  longtests__st_daglca_tests_013.js  (+344 more)
src/libraries/: CMakeLists.txt  doxygen.conf
src/libraries/fs3/: CMakeLists.txt  sg_dag_sqlite3.c  sg_dag_sqlite3_prototypes.h  sg_dag_sqlite3_typedefs.h  sg_dbndx_create.c  sg_dbndx_prototypes.h  sg_dbndx_query.c  sg_dbndx_typedefs.h  sg_dbndx_update.c  sg_fs3__private.h  sg_fs3_update.c  sg_repo_vtable__fs3.c  sg_repo_vtable__fs3.h  sg_treendx.c  sg_treendx_prototypes.h  sg_treendx_typedefs.h
src/libraries/include/: sg.h  sg_apple_unicode_prototypes.h  sg_area_prototypes.h  sg_attributes_prototypes.h  sg_audit_prototypes.h  sg_audit_typedefs.h  sg_base64.h  sg_bitvector_prototypes.h  sg_bitvector_typedefs.h  sg_blob_typedefs.h  sg_blobset_typedefs.h  (+201 more)
src/script/: CMakeLists.txt  vscript-usage.c  vscript.c
src/scss/: Makefile  _containers.scss  _defs.scss  sg.scss  tabify  uitweak.scss
src/server_files/: dispatch.js
src/tortoise/: CMakeLists.txt
src/winsync/: CMakeLists.txt  Config.cpp  Config.h  Resource.h  WorkerThread.cpp  WorkerThread.h  stdafx.cpp  stdafx.h  targetver.h  vvWinSync.cpp  vvWinSync.h  vvWinSync.rc
src/ztcheck/: CMakeLists.txt  ztcheck.c
testsuite/: CMakeLists.txt  c_test.bat  c_test.sh  disabled_for_wc__u0042_portability.c  disabled_for_wc__u0043_pendingtree.c  disabled_for_wc__u0046_pendport.c  disabled_for_wc__u0050_logstuff.c  disabled_for_wc__u0075_pendingtree_log.c  disabled_for_wc__u0109_resolve.c  filespec_bash_ref.sh  u0001_stdint.c  u0002_id.c  u0003_errno.c  u0004_file.c  u0005_string.c  u0007_hex.c  u0008_misc_utils.c  u0010_dbrecord.c  u0012_utf8.c  u0013_fsobj.c  u0014_pathname.c  u0015_dir.c  u0019_xmlwriter.c  u0020_utf8pathnames.c  u0021_workingdir.c  u0023_vcdiff.c  u0024_repo_query_implementation.c  u0025_jsonwriter.c  u0026_jsonparser.c  u0027_pool.c  u0028_vhash.c  u0031_repopath.c  u0032_repo.c  u0034_repo_treenode.c  u0036_committing.c  u0037_dag.c  u0038_closet.c  u0040_unc.c  u0041_rbtree.c  u0045_console.c  (+57 more)
testsuite/u0106_filetool_data/: bmp  doc  docx  gif  jpg  odp  ods  odt  png  ppt  pptx  tga  tif  txt  utf16be  utf16be_nul  utf16le  utf16le_nul  utf32be  utf32be_nul  utf32le  utf32le_nul  utf8  utf8_nobom  utf8_nobom_nul  utf8_nul  xls  xlsx
testsuite/u0111_fast_import_data/: _readme.txt  blob-tag.hand.gfi  blob-tag.hand.test  branch-roundtrip.veracity.gfi  branch-roundtrip.veracity.test  close-closed-branch.hand.gfi  close-closed-branch.hand.test  close-missing-branch.hand.gfi  close-missing-branch.hand.test  deleteall.hand.gfi  deleteall.hand.test  double-delete.hg-git.gfi  double-delete.hg-git.test  duplicate-sanitized-usernames.hand.gfi  duplicate-sanitized-usernames.hand.test  file-to-dir.hand.gfi  file-to-dir.hand.test  matching-shared-user.hand.gfi  matching-shared-user.hand.test  nobody-username.hand.gfi  nobody-username.hand.test  quoted-path.git.gfi  quoted-path.git.test  rename.hand.gfi  rename.hand.test  roub1.hg-git.gfi  roub1.hg-git.test  sanitize-branches.hand.gfi  sanitize-branches.hand.test  sanitize-tags.hand.gfi  sanitize-tags.hand.test  sha-support.hand.gfi  sha-support.hand.test  tag-rev1.veracity.gfi  tag-rev1.veracity.test  two-tx.hand.gfi  two-tx.hand.test
(+1177 files in other folders)
